--- a/MavenPractice01/.project
+++ b/MavenPractice01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MavenApp1</name>
+	<name>MavenPractice01</name>
 	<comment></comment>
 	<projects>
 	</projects>
