--- a/MavenPractice01/pom.xml
+++ b/MavenPractice01/pom.xml
@@ -4,4 +4,13 @@
   <artifactId>MavenPractice01</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>MavenPractice01</name>
+<dependencies> 
+  <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>7.0.0</version>
+</dependency>
+</dependencies> 
+
 </project>
